v4l2: disable renegotiation

We can't yet wait for the bufferpool to DRAIN before starting renegotiation so
disable it for now.

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=682770